commit translated contents

--- a/articles/virtual-machines/index.yml
+++ b/articles/virtual-machines/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: cynthn
   ms.author: cynthn
   ms.date: 02/14/2020
-  ms.openlocfilehash: aa1492a021caa69303834ce4a144d33ca05b15e0
-  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
+  ms.openlocfilehash: ea9b89a92aa271065a59de561dc684263ce1cdc4
+  ms.sourcegitcommit: 2ff0d073607bc746ffc638a84bb026d1705e543e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/20/2020
-  ms.locfileid: "86502837"
+  ms.lasthandoff: 08/06/2020
+  ms.locfileid: "87829027"
 highlightedContent:
   items:
   - title: 使用 Azure CLI 创建 Linux 虚拟机
@@ -50,7 +50,7 @@ conceptualContent:
     - url: ./linux/image-builder.md
       itemType: how-to-guide
       text: Azure 映像生成器
-    - url: /azure/virtual-machines/troubleshooting/linux-index
+    - url: ./troubleshooting/linux-index.yml
       itemType: how-to-guide
       text: 排查 Linux 虚拟机问题
     footerLink:
@@ -67,7 +67,7 @@ conceptualContent:
     - url: ../active-directory/managed-identities-azure-resources/qs-configure-portal-windows-vm.md?context=azure/virtual-machines/windows/context/windows-vm-context
       itemType: how-to-guide
       text: 配置托管标识
-    - url: /azure/virtual-machines/troubleshooting/index
+    - url: ./troubleshooting/index.yml
       itemType: how-to-guide
       text: 排查 Windows 虚拟机问题
     footerLink:
