commit translated contents

--- a/articles/event-hubs/index.yml
+++ b/articles/event-hubs/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: spelluru
   ms.author: spelluru
   ms.date: 06/23/2020
-  ms.openlocfilehash: 8b559591255a9856f644de5482ccec6b7d34a7f8
-  ms.sourcegitcommit: 01cd19edb099d654198a6930cebd61cae9cb685b
+  ms.openlocfilehash: 15f484665a74b7960908d2b430210fe921c33d5d
+  ms.sourcegitcommit: 2ff0d073607bc746ffc638a84bb026d1705e543e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/24/2020
-  ms.locfileid: "85314912"
+  ms.lasthandoff: 08/06/2020
+  ms.locfileid: "87836779"
 landingContent:
 - title: 关于事件中心
   linkLists:
@@ -41,7 +41,7 @@ landingContent:
       url: event-hubs-quickstart-cli.md
     - text: Azure PowerShell
       url: event-hubs-quickstart-powershell.md
-    - text: Azure 资源管理器模板
+    - text: Azure Resource Manager 模板
       url: event-hubs-resource-manager-namespace-event-hub.md
 - title: 创建专用群集
   linkLists:
@@ -142,7 +142,7 @@ landingContent:
     - text: 使用流分析处理适用于 Apache Kafka 的事件中心的事件
       url: event-hubs-kafka-stream-analytics.md
     - text: 使用事件中心将数据流式传输到 Azure Databricks
-      url: ../azure-databricks/databricks-stream-from-eventhubs.md
+      url: /azure/databricks/scenarios/databricks-stream-from-eventhubs
 - title: 监视和管理
   linkLists:
   - linkListType: how-to-guide
