commit translated contents

--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -34,8 +34,6 @@
           href: connect-python.md
         - name: Node.js
           href: connect-nodejs.md
-        - name: Azure PowerShell
-          href: connect-powershell.md
         - name: Ruby
           href: connect-ruby.md
         - name: C++
@@ -193,7 +191,11 @@
         - name: 创建用户
           href: howto-create-users.md
         - name: 连接字符串
-          href: howto-connection-string.md
+          items:
+            - name: 连接应用程序
+              href: howto-connection-string.md
+            - name: Azure PowerShell
+              href: howto-connection-string-powershell.md
         - name: 配置 SSL
           href: howto-configure-ssl.md
         - name: 配置 TLS
