--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -79,7 +79,7 @@
 - name: 资源
   items:
     - name: 定价和限制
-      href: 'https://go.microsoft.com/fwlink/?linkid=2087258'
+      href: 'https://azure.microsoft.com/en-us/pricing/details/cognitive-services/form-recognizer/'
     - name: UserVoice
       href: 'https://go.microsoft.com/fwlink/?linkid=2090535'
     - name: Stack Overflow
