--- a/articles/security/fundamentals/TOC.yml
+++ b/articles/security/fundamentals/TOC.yml
@@ -58,6 +58,8 @@
       href: network-best-practices.md
     - name: DDoS 保护
       href: ddos-best-practices.md
+    - name: DDoS 防护安全基线
+      href: ddos-protection-security-baseline.md
     - name: 无关联的 DNS 和子域接管
       href: subdomain-takeover.md
     - name: 安全混合网络体系结构
