--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -94,7 +94,7 @@
           href: concepts-audit-logs.md
         - name: 查询存储
           href: concepts-query-store.md
-        - name: 查询性能见解
+        - name: Query Performance Insight
           href: concepts-query-performance-insight.md
         - name: 性能建议
           href: concepts-performance-recommendations.md
@@ -145,7 +145,11 @@
         - name: 创建用户
           href: howto-create-users.md
         - name: 连接字符串
-          href: howto-connection-string.md
+          items:
+            - name: 连接应用程序
+              href: howto-connection-string.md
+            - name: Azure PowerShell
+              href: howto-connection-string-powershell.md
         - name: 配置 SSL
           href: howto-configure-ssl.md
         - name: 配置 TLS
