--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -13,12 +13,12 @@ metadata:
   author: Juliako
   ms.author: juliako
   ms.date: 07//2020
-  ms.openlocfilehash: da549a54773365d39e3a19179acd6495a6ac1ce5
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: d6f78b4494a16a0522f93658b063d157819c519e
+  ms.sourcegitcommit: 2ff0d073607bc746ffc638a84bb026d1705e543e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87023358"
+  ms.lasthandoff: 08/06/2020
+  ms.locfileid: "87826137"
 highlightedContent:
   items:
   - title: 关于 Azure 媒体服务 v3
@@ -38,7 +38,7 @@ highlightedContent:
     url: ./live-video-analytics-edge/overview.md
   - title: Azure Media Player
     itemType: overview
-    url: https://docs.microsoft.com/azure/media-services/azure-media-player/azure-media-player-overview
+    url: ./azure-media-player/azure-media-player-overview.md
   - title: 关于 Azure 媒体服务 v2（旧版）
     itemType: overview
     url: ./previous/media-services-overview.md
@@ -126,10 +126,10 @@ additionalContent:
   - items:
     - title: Azure 存储
       summary: 了解块 Blob 和容器
-      url: https://docs.microsoft.com/azure/storage/
+      url: ../storage/index.yml
     - title: CDN
       summary: 借助 Azure CDN 可使用 Akamai 和 Verizon 提供的服务对内容进行大规模流式处理，或者跨多个内容分发网络实现负载均衡
-      url: https://docs.microsoft.com/azure/cdn
+      url: ../cdn/index.yml
     - title: 事件网格
       summary: 了解如何使用 Azure 事件网格响应相关事件
       url: ../event-grid/index.yml
