--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -90,7 +90,7 @@
           href: service-fabric-tutorial-standalone-install-an-application.md
         - name: 4- 清理群集和删除基础结构
           href: service-fabric-tutorial-standalone-clean-up.md
-- name: 最佳实践
+- name: 最佳做法
   items:
     - name: Service Fabric 最佳做法概述
       href: service-fabric-best-practices-overview.md
@@ -635,7 +635,7 @@
             - name: 使用 Azure Pipelines 设置持续集成
               href: ./service-fabric-tutorial-deploy-app-with-cicd-vsts.md
             - name: 使用 Jenkins 部署 Linux 应用程序
-              href: service-fabric-cicd-your-linux-applications-with-jenkins.md
+              href: /azure/developer/jenkins/deploy-to-service-fabric-cluster
     - name: 设置和配置反向代理
       items:
         - name: 设置和配置反向代理
