--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -70,8 +70,6 @@
           href: how-to-create-azure-function.md
         - name: 查询孪生图
           href: how-to-query-graph.md
-        - name: 查看 Azure Monitor 中的指标
-          href: how-to-view-metrics.md
     - name: 连接输入
       items:
         - name: 从 IoT 中心引入遥测数据
@@ -79,13 +77,19 @@
     - name: 连接输出
       items:
         - name: 管理终结点和路由
-          href: how-to-manage-routes.md
+          items:
+            - name: API 和 CLI 版本
+              href: how-to-manage-routes-apis-cli.md
+            - name: 门户版本
+              href: how-to-manage-routes-portal.md
         - name: 与 Azure Maps 集成
           href: how-to-integrate-maps.md
         - name: 与 Azure 时序见解集成
           href: how-to-integrate-time-series-insights.md
     - name: 疑难解答
       items:
+        - name: 查看 Azure Monitor 中的指标
+          href: troubleshoot-metrics.md
         - name: 启用诊断日志
           href: troubleshoot-diagnostics.md
         - name: 已知问题
