--- a/articles/active-directory/managed-identities-azure-resources/TOC.yml
+++ b/articles/active-directory/managed-identities-azure-resources/TOC.yml
@@ -126,20 +126,14 @@
           href: how-to-view-managed-identity-service-principal-powershell.md
 - name: 参考
   items:
-    - name: CLI
-      href: /cli/azure/identity
-    - name: PowerShell
-      href: '/powershell/module/az.managedserviceidentity#managed_service_identity'
     - name: .NET
-      href: '/dotnet/api/microsoft.azure.management.resourcemanager.fluent.authentication#azure-dotnet'
+      href: 'https://docs.microsoft.com/dotnet/api/overview/azure/identity-readme?view=azure-dotnet'
     - name: Java
-      href: 'https://github.com/Azure/azure-libraries-for-java#ready-to-run-code-samples-for-virtual-machines'
+      href: 'https://docs.microsoft.com/java/api/overview/azure/identity-readme?view=azure-java-stable'
+    - name: JavaScript
+      href: 'https://docs.microsoft.com/javascript/api/overview/azure/identity-readme?view=azure-node-latest'
     - name: Python
-      href: 'https://docs.microsoft.com/windows/python/'
-    - name: Ruby
-      href: 'https://rubygems.org/gems/azure_mgmt_msi'
-    - name: Node.js
-      href: 'https://nodejs.org/en/docs/'
+      href: 'https://docs.microsoft.com/python/api/overview/azure/identity-readme?view=azure-python'
     - name: Go
       href: 'https://golang.org/doc/'
 - name: 资源
@@ -150,5 +144,5 @@
       href: services-support-managed-identities.md
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-msi'
-    - name: AAD 开发者论坛
+    - name: Azure AD 开发者论坛
       href: 'https://feedback.azure.com/forums/169401-azure-active-directory/category/164757-developer-experiences'
