--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -94,7 +94,7 @@
               href: reservations/understand-reserved-instance-usage.md?toc=/azure/cost-management-billing/toc.json
             - name: 企业客户的使用情况数据
               href: reservations/understand-reserved-instance-usage-ea.md?toc=/azure/cost-management-billing/toc.json
-        - name: 计费术语
+        - name: 计费
           items:
             - name: 个人订阅使用情况术语
               href: understand/understand-usage.md
@@ -108,6 +108,8 @@
               href: manage/mca-understand-pricesheet.md
             - name: Microsoft 合作伙伴协议发票术语
               href: understand/mpa-invoice-terms.md
+            - name: 对已更新的单个计费帐户的更改
+              href: understand/mosp-new-customer-experience.md
             - name: Microsoft 客户协议的计费帐户
               href: understand/mca-overview.md
             - name: Microsoft 合作伙伴协议的计费帐户
