--- a/articles/healthcare-apis/index.yml
+++ b/articles/healthcare-apis/index.yml
@@ -9,15 +9,15 @@ metadata:
   ms.subservice: fhir
   ms.topic: landing-page
   ms.collection: collection
-  author: hansenms
-  ms.author: mihansen
-  ms.date: 11/06/2019
-  ms.openlocfilehash: 7940d28dc3ad0e77510fc0522224f81190dd0db7
-  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
+  author: matjazl
+  ms.author: matjazl
+  ms.date: 08/06/2020
+  ms.openlocfilehash: 24f509c4ee2475842486fe6e11f98860b14a43d7
+  ms.sourcegitcommit: 4e5560887b8f10539d7564eedaff4316adb27e2c
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/20/2020
-  ms.locfileid: "86521337"
+  ms.lasthandoff: 08/06/2020
+  ms.locfileid: "87901668"
 landingContent:
 - title: Azure API for FHIR 入门
   linkLists:
@@ -29,7 +29,7 @@ landingContent:
     links:
     - text: 部署适用于 FHIR 的 API 服务器
       url: fhir-paas-portal-quickstart.md
-    - text: 部署 IoT 连接器（预览版）
+    - text: 部署适用于 FHIR 的 Azure IoT 连接器（预览版）
       url: iot-fhir-portal-quickstart.md
 - title: 设置教程
   linkLists:
