--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -229,7 +229,7 @@
         - name: 设置输入和输出目录
           displayName: 'large data, write, experiment files, size limit'
           href: how-to-save-write-experiment-files.md
-        - name: 交互式调试
+        - name: Visual Studio Code
           displayName: 'Visual Studio Code, VSCode, debug, bugs, remote, compute, instance'
           href: how-to-set-up-vs-code-remote.md
         - name: Git 集成
@@ -437,26 +437,28 @@
           href: how-to-schedule-pipelines.md
         - name: 触发管道
           href: how-to-trigger-published-pipeline.md
+        - name: 设计器（拖放）
+          items:
+            - name: 记录指标
+              displayName: 'designer, logging'
+              href: how-to-track-designer-experiments.md
+            - name: 转换数据
+              displayName: pipeline
+              href: how-to-designer-transform-data.md
+            - name: 使用已发布的管道进行保留
+              displayName: 'retrain, designer, published pipeline'
+              href: how-to-retrain-designer.md
+            - name: 批预测
+              displayName: score scoring asynchronous consume pipeline parallelrunstep inference designer
+              href: how-to-run-batch-predictions-designer.md
+            - name: 执行 Python 脚本
+              displayName: 'feature extraction, feature engineering'
+              href: how-to-designer-python.md
         - name: 调试管道并排查管道问题
           displayName: designer
           href: how-to-debug-pipelines.md
         - name: 在 Application Insights 中调试管道
           href: how-to-debug-pipelines-application-insights.md
-        - name: 设计器日志指标
-          displayName: 'designer, logging'
-          href: how-to-track-designer-experiments.md
-        - name: 设计器转换数据
-          displayName: pipeline
-          href: how-to-designer-transform-data.md
-        - name: 在设计器中使用已发布的管道重新训练
-          displayName: 'retrain, designer, published pipeline'
-          href: how-to-retrain-designer.md
-        - name: 设计器批量预测
-          displayName: score scoring asynchronous consume pipeline parallelrunstep inference designer
-          href: how-to-run-batch-predictions-designer.md
-        - name: 设计器执行 Python 代码
-          displayName: 'feature extraction, feature engineering'
-          href: how-to-designer-python.md
         - name: 使用并行运行步骤
           displayName: score scoring batch consume pipeline parallelrunstep inference
           href: how-to-use-parallel-run-step.md
@@ -475,6 +477,9 @@
     - name: 管理资源 VS Code
       displayName: 'vscode,resources'
       href: how-to-manage-resources-vscode.md
+    - name: VS Code 交互式调试
+      displayName: 'vscode,remote,debug,pipelines,deployments,ssh'
+      href: how-to-debug-visual-studio-code.md
     - name: 导出和删除数据
       displayName: GDPR
       href: how-to-export-delete-data.md
