--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -1248,7 +1248,7 @@
           href: sql-api-sdk-dotnet-changefeed.md
         - name: .NET 批量执行程序库 v2
           href: sql-api-sdk-bulk-executor-dot-net.md
-    - name: Java SDK
+    - name: Java SDK 和连接符
       items:
         - name: Java SDK v4
           href: sql-api-sdk-java-v4.md
@@ -1256,6 +1256,10 @@
           href: sql-api-sdk-async-java.md
         - name: Sync Java SDK v2
           href: sql-api-sdk-java.md
+        - name: 适用于 SQL API 的 Spring 数据连接器
+          href: sql-api-sdk-java-spring.md
+        - name: 适用于 SQL API 的 Spark 连接器
+          href: sql-api-sdk-java-spark.md
         - name: Java 批量执行程序库 v2
           href: sql-api-sdk-bulk-executor-java.md
     - name: Node.js
