--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -269,7 +269,7 @@
               href: query-lucene-syntax.md
             - name: moreLikeThis（预览版）
               href: search-more-like-this.md
-    - name: 筛选器
+    - name: “筛选器”
       items:
         - name: 筛选器概述
           href: search-filters.md
@@ -312,9 +312,15 @@
         - name: 预览功能列表
           href: search-api-preview.md
         - name: 使用 .NET 进行开发
-          href: search-howto-dotnet-sdk.md
+          items:
+            - name: 使用 Microsoft.Azure.Search (v10)
+              href: search-howto-dotnet-sdk.md
+            - name: 开始使用 (v10)
+              href: search-get-started-dotnet-v10.md
         - name: 升级 SDK
           items:
+            - name: .NET SDK 11.0
+              href: search-dotnet-sdk-migration-version-11.md
             - name: .NET SDK 10.0
               href: search-dotnet-sdk-migration-version-10.md
             - name: .NET SDK 9.0
@@ -349,7 +355,7 @@
           items:
             - name: 安全筛选器
               href: search-security-trimming-for-azure-search.md
-            - name: AAD 标识筛选器
+            - name: 筛选用户标识
               href: search-security-trimming-for-azure-search-with-aad.md
     - name: 管理
       items:
