--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -59,6 +59,8 @@
       href: ../../postgresql/postgresql-hyperscale-security-baseline.md
     - name: Azure Databricks 安全基线
       href: ../../azure-databricks/security-baseline.md
+    - name: Azure 防火墙安全基线
+      href: ../../firewall/security-baseline.md
     - name: Azure Functions 安全基线
       href: ../../azure-functions/security-baseline.md
     - name: Azure Policy 安全基线
@@ -83,6 +85,8 @@
       href: ../fundamentals/customer-lockbox-security-baseline.md
     - name: Data Lake Analytics 安全基线
       href: ../../data-lake-analytics/security-baseline.md
+    - name: DDOS 防护安全基线
+      href: ../fundamentals/ddos-protection-security-baseline.md
     - name: 事件中心安全基线
       href: ../../event-hubs/security-baseline.md
     - name: ExpressRoute 安全基线
@@ -95,6 +99,8 @@
       href: ../../logic-apps/security-baseline.md
     - name: 网络观察程序安全基线
       href: ../../network-watcher/security-baseline.md
+    - name: 安全中心基线
+      href: ../../security-center/security-baseline.md
     - name: Service Fabric 基线
       href: ../../service-fabric/security-baseline.md
     - name: 流分析基线
