--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -103,7 +103,7 @@
           href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Python
           href: ../common/storage-samples-python.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Javascript
+        - name: JavaScript
           href: ../common/storage-samples-javascript.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 其他语言
           href: ../common/storage-samples.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -471,7 +471,7 @@
                   href: ../common/storage-use-azcopy-configure.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Azure 数据工厂
               href: ../../data-factory/connector-azure-blob-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 使用 NFS 从 Linux 装载存储
+            - name: 使用 NFS 装载存储
               href: network-file-system-protocol-support-how-to.md
             - name: 使用 blobfuse 从 Linux 装载存储
               href: storage-how-to-mount-container-linux.md
@@ -560,6 +560,8 @@
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
             - name: 排查存储资源管理器问题
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 存储资源管理器安全性
+              href: ../common/storage-explorer-security.md
             - name: 存储资源管理器支持策略和生命周期
               href: ../common/storage-explorer-support-policy-lifecycle.md
             - name: 存储资源管理器可访问性
@@ -744,7 +746,7 @@
                 - name: 配置、优化、故障排除
                   href: ../common/storage-use-azcopy-configure.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Azure 数据工厂
-              href: ../../data-factory/connector-azure-blob-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: ../../data-factory/connector-azure-data-lake-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 使用 DistCp 工具传输数据
               href: data-lake-storage-use-distcp.md
             - name: 通过数据移动库传输数据
@@ -834,6 +836,10 @@
               href: 'https://github.com/microsoft/AzureStorageExplorer/releases'
             - name: 排查存储资源管理器问题
               href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 存储资源管理器安全性
+              href: ../common/storage-explorer-security.md
+            - name: 存储资源管理器支持策略和生命周期
+              href: ../common/storage-explorer-support-policy-lifecycle.md
             - name: 存储资源管理器可访问性
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Microsoft Q&A 问题页面
