commit translated contents

--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -298,6 +298,9 @@
               displayName: 'firstline worker, frontline worker, flw'
             - name: 单个和多个帐户公共客户端应用
               href: single-multi-account.md
+            - name: 处理错误和异常
+              href: msal-android-handling-exceptions.md
+              displayName: 'android, mobile'
             - name: 日志记录
               href: msal-logging.md?tabs=android
         - name: iOS 和 macOS
