--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -279,7 +279,7 @@
                 - name: Databricks
                   href: reservations/prepay-databricks-reserved-capacity.md?toc=/azure/cost-management-billing/toc.json
                 - name: 数据资源管理器
-                  href: /dataexplorer-docs/data-explorer/pricing-reserved-capacity.md
+                  href: /azure/data-explorer/pricing-reserved-capacity
                 - name: 磁盘存储
                   href: ../virtual-machines/linux/disks-reserved-capacity.md?toc=/azure/cost-management-billing/toc.json
                 - name: 专用主机
