--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -90,7 +90,7 @@
           href: service-fabric-tutorial-standalone-install-an-application.md
         - name: 4- 清理群集和删除基础结构
           href: service-fabric-tutorial-standalone-clean-up.md
-- name: 最佳做法
+- name: 最佳实践
   items:
     - name: Service Fabric 最佳做法概述
       href: service-fabric-best-practices-overview.md
@@ -671,7 +671,7 @@
                 - name: 以编程方式横向扩展
                   href: service-fabric-cluster-programmatic-scaling.md
                 - name: 纵向扩展主节点类型
-                  href: service-fabric-scale-up-node-type.md
+                  href: service-fabric-scale-up-primary-node-type.md
                 - name: 添加节点类型
                   href: virtual-machine-scale-set-scale-node-type-scale-out.md
                 - name: 删除节点类型
