--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -66,7 +66,7 @@
       href: concepts-scale.md
     - name: 节点自动修复
       href: node-auto-repair.md
-    - name: 最佳做法
+    - name: 最佳实践
       items:
         - name: 概述
           href: best-practices.md
@@ -290,8 +290,8 @@
           href: windows-container-powershell.md
         - name: 远程连接
           href: rdp.md
-        - name: 已知的限制
-          href: windows-node-limitations.md
+        - name: Windows Server 容器常见问题解答
+          href: windows-faq.md
         - name: 使用 Kubernetes 仪表板
           href: kubernetes-dashboard.md
         - name: 创建用于 Windows Server 容器的 Dockerfile
